# Agentic3DSlicer

./: .gitignore  Claude.md  README.md
.claude/: settings.local.json
.claude/skills/self-evolution/: SKILL.md  index.json
.claude/skills/self-evolution/lessons/: sat-python-env-setup.md  sat-server-integration.md  slicer-restart-loop-pitfall.md  slicer-source-search-strategy.md  slicer-unix-socket-ipc.md
info/: goal.md  project_structure.md  resources.md
modules/Bridge/: USAGE.md  fetch_registry.py  inject.py  registry.json  start_slicer.py
modules/Bridge/agent/: goal.md
modules/Bridge/dev/: demo_gui.py  poc_test.py  test_actions.py  test_session.py
modules/Bridge/reference/: bootstrap.py  session.py  usage_action.py
modules/Bridge/slicer_use/actions/: __init__.py  crop.py  histogram.py  io.py  markup.py  model.py  scene.py  segment_editor.py  segmentation.py  transform.py  visualization.py  volume.py
modules/Bridge/slicer_use/controller/: service.py
modules/Bridge/slicer_use/slicer/: bootstrap.py  push_listener.py  session.py  state.py
modules/Segmentation/: README.md  sat_inference.py
modules/Segmentation/SATSeg/: CMakeLists.txt  SATSeg.py
modules/Segmentation/SATSeg/Testing/: CMakeLists.txt  SATSegTest.py
modules/Segmentation/agent/: auto_evaluate.py  demo_live.py  eval_ct_abdomen.py  eval_mr_brain.py  eval_rotation.py  goal.md  plan.md
modules/Segmentation/server/: sat_server.py  start_server.sh
tools/: README.md  ROADMAP.md  index.json
tools/automation/: check-module-registered.py  install-extension.py  run-slicer-script.sh  screenshot-module.py  slicer-ipc-bootstrap.py  slicer-ipc-client-poc.py
tools/scene/: fiducial-registration.py  list-mrml-nodes.py
tools/snippets/: automation.md  slicer-automation-patterns.md
tools/visualization/: capture-3d-screenshot.py  enable-volume-rendering.py  rotate-3d-view.py
tools/volumes/: load-sample-mrhead.py
